# causal-workbench

./: .gitignore  LICENSE  README.md  dump.rdb  mlflow.db  pyproject.toml
data/: sample_data.csv  sample_data_text.csv
docs/: phase1_polars.md  phase2_pydantic.md  phase3_fastapi.md  phase4_nuisance_learners.md  phase4_pytorch.md  phase5_transformers.md  phase6_celery.md  phase7_pydantic_ai.md
src/agents/: explainer.py
src/api/: main.py  tasks.py
src/core/: config.py  estimators.py  learners.py  pipeline.py  schemas.py  text_features.py
tests/: test_api.py  test_pipeline.py  test_schemas.py
